Updated dataset splits.

--- a/old_code/data_prep/AudioSet/split_dataset.ipynb
+++ b/old_code/data_prep/AudioSet/split_dataset.ipynb
@@ -15,9 +15,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split"
+    "import pandas as pd"
    ]
   },
   {
@@ -41,8 +39,8 @@
    "outputs": [],
    "source": [
     "# script options:\n",
-    "val_fract = 0.1\n",
-    "test_fract = 0.1\n",
+    "N_class_val = 150     # number of samples per class in validation set\n",
+    "N_class_test = 150     # number of samples per class in test set\n",
     "new_split_metadata_dir = \"/proj/systewar/datasets/audioset_music_mood/new_split_metadata_files\"\n",
     "new_split_metadata_files = {\n",
     "    \"train\": \"/proj/systewar/datasets/audioset_music_mood/new_split_metadata_files/metadata_train.csv\",\n",
@@ -110,20 +108,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size: 80.00% of dataset = 10970 samples.\n",
-      "Validation set size: 10.00% of dataset = 1371 samples.\n",
-      "Test set size: 10.00% of dataset = 1371 samples.\n"
+      "Validation set size: 1050 samples = 7.66% of entire dataset.\n",
+      "Test set size: 1050 samples = 7.66% of entire dataset.\n"
      ]
     }
    ],
    "source": [
-    "# print subset sizes:\n",
-    "train_set_size = int(np.around((1 - test_fract - val_fract) * all_metadata.shape[0]))\n",
-    "print(\"Training set size: {:.2f}% of dataset = {} samples.\".format(100 * (1 - test_fract - val_fract), train_set_size))\n",
-    "val_set_size = int(np.around(val_fract * all_metadata.shape[0]))\n",
-    "print(\"Validation set size: {:.2f}% of dataset = {} samples.\".format(100 * val_fract, val_set_size))\n",
-    "test_set_size = int(np.around(test_fract * all_metadata.shape[0]))\n",
-    "print(\"Test set size: {:.2f}% of dataset = {} samples.\".format(100 * test_fract, test_set_size))"
+    "# print validation and test sizes:\n",
+    "n_classes = len(all_metadata[\"label\"].unique())\n",
+    "val_set_size = N_class_val * n_classes\n",
+    "print(\"Validation set size: {} samples = {:.2f}% of entire dataset.\".format(val_set_size, 100 * (val_set_size / all_metadata.shape[0])))\n",
+    "test_set_size = N_class_test * n_classes\n",
+    "print(\"Test set size: {} samples = {:.2f}% of entire dataset.\".format(test_set_size, 100 * (test_set_size / all_metadata.shape[0])))"
    ]
   },
   {
@@ -170,39 +166,29 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1371 entries, 12030 to 9009\n",
+      "Int64Index: 1050 entries, 5169 to 8349\n",
       "Data columns (total 4 columns):\n",
       " #   Column          Non-Null Count  Dtype \n",
       "---  ------          --------------  ----- \n",
-      " 0   orig_subset     1371 non-null   object\n",
-      " 1   file_name       1371 non-null   object\n",
-      " 2   length_samples  1371 non-null   int64 \n",
-      " 3   label           1371 non-null   object\n",
+      " 0   orig_subset     1050 non-null   object\n",
+      " 1   file_name       1050 non-null   object\n",
+      " 2   length_samples  1050 non-null   int64 \n",
+      " 3   label           1050 non-null   object\n",
       "dtypes: int64(1), object(3)\n",
-      "memory usage: 53.6+ KB\n",
-      "None\n",
-      "\n",
-      "Number of Exciting music clips: 458\n",
-      "Number of Tender music clips: 336\n",
-      "Number of Scary music clips: 140\n",
-      "Number of Sad music clips: 138\n",
-      "Number of Happy music clips: 115\n",
-      "Number of Angry music clips: 95\n",
-      "Number of Funny music clips: 89\n"
+      "memory usage: 41.0+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "# split into stratified training/val and test sets:\n",
-    "metadata_train_val, metadata_test = train_test_split(all_metadata, test_size=test_set_size, stratify=all_metadata[\"label\"], random_state=42)\n",
-    "assert metadata_test.shape[0] == test_set_size, \"Test set metadata has incorrect size.\"\n",
+    "# construct stratified test set by randomly sampling from each class:\n",
+    "metadata_test_groups = all_metadata.groupby(by=\"label\", axis=\"index\")\n",
+    "metadata_test = metadata_test_groups.sample(n=N_class_test, random_state=42)\n",
     "print(metadata_test.info())\n",
     "\n",
-    "# print test set class distribution:\n",
-    "print()\n",
-    "label_counts = metadata_test[\"label\"].value_counts()\n",
-    "for label in metadata_test[\"label\"].value_counts().index:\n",
-    "    print(\"Number of {} clips: {}\".format(label, label_counts[label]))"
+    "# sanity check:\n",
+    "for count in metadata_test[\"label\"].value_counts():\n",
+    "    assert count == N_class_test, \"Error with creating stratified test set.\""
    ]
   },
   {
@@ -215,44 +201,78 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1371 entries, 7707 to 3650\n",
+      "Int64Index: 1050 entries, 12807 to 354\n",
       "Data columns (total 4 columns):\n",
       " #   Column          Non-Null Count  Dtype \n",
       "---  ------          --------------  ----- \n",
-      " 0   orig_subset     1371 non-null   object\n",
-      " 1   file_name       1371 non-null   object\n",
-      " 2   length_samples  1371 non-null   int64 \n",
-      " 3   label           1371 non-null   object\n",
+      " 0   orig_subset     1050 non-null   object\n",
+      " 1   file_name       1050 non-null   object\n",
+      " 2   length_samples  1050 non-null   int64 \n",
+      " 3   label           1050 non-null   object\n",
       "dtypes: int64(1), object(3)\n",
-      "memory usage: 53.6+ KB\n",
-      "None\n",
-      "\n",
-      "Number of Exciting music clips: 457\n",
-      "Number of Tender music clips: 336\n",
-      "Number of Scary music clips: 140\n",
-      "Number of Sad music clips: 138\n",
-      "Number of Happy music clips: 115\n",
-      "Number of Angry music clips: 95\n",
-      "Number of Funny music clips: 90\n"
+      "memory usage: 41.0+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "# split into stratified training and validation sets:\n",
-    "metadata_train, metadata_val = train_test_split(metadata_train_val, test_size=val_set_size, stratify=metadata_train_val[\"label\"], random_state=42)\n",
-    "assert metadata_val.shape[0] == val_set_size, \"Validation set metadata has incorrect size.\"\n",
+    "# remove test set:\n",
+    "metadata_train_val = all_metadata.drop(index=list(metadata_test.index))\n",
+    "\n",
+    "# construct stratified validation set by randomly sampling from each class:\n",
+    "metadata_val_groups = metadata_train_val.groupby(by=\"label\", axis=\"index\")\n",
+    "metadata_val = metadata_val_groups.sample(n=N_class_val, random_state=42)\n",
     "print(metadata_val.info())\n",
     "\n",
-    "# print validation set class distribution:\n",
-    "print()\n",
-    "label_counts = metadata_val[\"label\"].value_counts()\n",
-    "for label in metadata_val[\"label\"].value_counts().index:\n",
-    "    print(\"Number of {} clips: {}\".format(label, label_counts[label]))"
+    "# sanity check:\n",
+    "for count in metadata_val[\"label\"].value_counts():\n",
+    "    assert count == N_class_val, \"Error with creating stratified validation set.\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 11613 entries, 0 to 13710\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   orig_subset     11613 non-null  object\n",
+      " 1   file_name       11613 non-null  object\n",
+      " 2   length_samples  11613 non-null  int64 \n",
+      " 3   label           11613 non-null  object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 453.6+ KB\n",
+      "None\n",
+      "\n",
+      "Exciting music    4276\n",
+      "Tender music      3058\n",
+      "Scary music       1101\n",
+      "Sad music         1085\n",
+      "Happy music        852\n",
+      "Angry music        646\n",
+      "Funny music        595\n",
+      "Name: label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# construct training set:\n",
+    "metadata_train = metadata_train_val.drop(index=list(metadata_val.index))\n",
+    "print(metadata_train.info())\n",
+    "print()\n",
+    "print(metadata_train[\"label\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +310,7 @@
     "class_counts_train = metadata_train[\"label\"].value_counts()\n",
     "class_counts_val = metadata_val[\"label\"].value_counts()\n",
     "class_counts_test = metadata_test[\"label\"].value_counts()\n",
-    "for class_label in all_metadata[\"label\"].unique().tolist():\n",
+    "for class_label in metadata_test_groups.groups.keys():\n",
     "    assert class_counts_all[class_label] == class_counts_train[class_label] + class_counts_val[class_label] + class_counts_test[class_label], \"Error with splitting dataset.\"\n",
     "\n",
     "# save to file:\n",
