--- a/old_code/data_prep/IMAC_images/split_dataset.ipynb
+++ b/old_code/data_prep/IMAC_images/split_dataset.ipynb
@@ -15,9 +15,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split"
+    "import pandas as pd"
    ]
   },
   {
@@ -39,8 +37,8 @@
    "outputs": [],
    "source": [
     "# script options:\n",
-    "val_fract = 0.1\n",
-    "test_fract = 0.1\n",
+    "N_class_val = 200     # number of samples per class in validation set\n",
+    "N_class_test = 200     # number of samples per class in test set\n",
     "metadata_files_split = {\n",
     "    \"train\": \"/proj/systewar/datasets/IMAC/image_dataset/metadata_train.csv\",\n",
     "    \"val\": \"/proj/systewar/datasets/IMAC/image_dataset/metadata_val.csv\",\n",
@@ -109,7 +107,7 @@
     "    emotion_labels += n_images * [label]\n",
     "\n",
     "# create dataframe:\n",
-    "all_metadata = pd.DataFrame(\n",
+    "metadata = pd.DataFrame(\n",
     "    data={\n",
     "        \"subdir_name\": subdirs,\n",
     "        \"file_name\": image_file_names,\n",
@@ -117,9 +115,9 @@
     "    }\n",
     ")\n",
     "\n",
-    "print(\"Total size of dataset: {}\".format(all_metadata.shape[0]))\n",
+    "print(\"Total size of dataset: {}\".format(metadata.shape[0]))\n",
     "print()\n",
-    "print(all_metadata.info())"
+    "print(metadata.info())"
    ]
   },
   {
@@ -131,20 +129,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size: 80.00% of dataset = 17463 samples.\n",
-      "Validation set size: 10.00% of dataset = 2183 samples.\n",
-      "Test set size: 10.00% of dataset = 2183 samples.\n"
+      "Validation set size: 1600 samples = 7.33% of entire dataset.\n",
+      "Test set size: 1600 samples = 7.33% of entire dataset.\n"
      ]
     }
    ],
    "source": [
-    "# print subset sizes:\n",
-    "train_set_size = int(np.around((1 - test_fract - val_fract) * all_metadata.shape[0]))\n",
-    "print(\"Training set size: {:.2f}% of dataset = {} samples.\".format(100 * (1 - test_fract - val_fract), train_set_size))\n",
-    "val_set_size = int(np.around(val_fract * all_metadata.shape[0]))\n",
-    "print(\"Validation set size: {:.2f}% of dataset = {} samples.\".format(100 * val_fract, val_set_size))\n",
-    "test_set_size = int(np.around(test_fract * all_metadata.shape[0]))\n",
-    "print(\"Test set size: {:.2f}% of dataset = {} samples.\".format(100 * test_fract, test_set_size))"
+    "# print validation and test sizes:\n",
+    "n_classes = len(metadata[\"label\"].unique())\n",
+    "val_set_size = N_class_val * n_classes\n",
+    "print(\"Validation set size: {} samples = {:.2f}% of entire dataset.\".format(val_set_size, 100 * (val_set_size / metadata.shape[0])))\n",
+    "test_set_size = N_class_test * n_classes\n",
+    "print(\"Test set size: {} samples = {:.2f}% of entire dataset.\".format(test_set_size, 100 * (test_set_size / metadata.shape[0])))"
    ]
   },
   {
@@ -168,9 +164,9 @@
     }
    ],
    "source": [
-    "# print class distribution:\n",
-    "label_counts = all_metadata[\"label\"].value_counts()\n",
-    "for label in all_metadata[\"label\"].value_counts().index:\n",
+    "# get label counts:\n",
+    "label_counts = metadata[\"label\"].value_counts()\n",
+    "for label in metadata[\"label\"].value_counts().index:\n",
     "    print(\"Number of {} images: {}\".format(label, label_counts[label]))"
    ]
   },
@@ -184,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -192,44 +188,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2183 entries, 19379 to 2890\n",
+      "Int64Index: 1600 entries, 5097 to 20417\n",
       "Data columns (total 3 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   subdir_name  2183 non-null   object\n",
-      " 1   file_name    2183 non-null   object\n",
-      " 2   label        2183 non-null   object\n",
+      " 0   subdir_name  1600 non-null   object\n",
+      " 1   file_name    1600 non-null   object\n",
+      " 2   label        1600 non-null   object\n",
       "dtypes: object(3)\n",
-      "memory usage: 68.2+ KB\n",
-      "None\n",
-      "\n",
-      "Number of contentment images: 513\n",
-      "Number of amusement images: 472\n",
-      "Number of awe images: 288\n",
-      "Number of excitement images: 273\n",
-      "Number of sadness images: 263\n",
-      "Number of disgust images: 159\n",
-      "Number of anger images: 118\n",
-      "Number of fear images: 97\n"
+      "memory usage: 50.0+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "# split into stratified training/val and test sets:\n",
-    "metadata_train_val, metadata_test = train_test_split(all_metadata, test_size=test_set_size, stratify=all_metadata[\"label\"], random_state=42)\n",
-    "assert metadata_test.shape[0] == test_set_size, \"Test set metadata has incorrect size.\"\n",
+    "# construct stratified test set by randomly sampling from each class:\n",
+    "metadata_test_groups = metadata.groupby(by=\"label\", axis=\"index\")\n",
+    "metadata_test = metadata_test_groups.sample(n=N_class_test, random_state=42)\n",
     "print(metadata_test.info())\n",
     "\n",
-    "# print test set class distribution:\n",
-    "print()\n",
-    "label_counts = metadata_test[\"label\"].value_counts()\n",
-    "for label in metadata_test[\"label\"].value_counts().index:\n",
-    "    print(\"Number of {} images: {}\".format(label, label_counts[label]))"
+    "# sanity check:\n",
+    "for count in metadata_test[\"label\"].value_counts():\n",
+    "    assert count == N_class_test, \"Error with creating stratified test set.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -237,44 +222,77 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2183 entries, 19808 to 7695\n",
+      "Int64Index: 1600 entries, 7392 to 20369\n",
       "Data columns (total 3 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   subdir_name  2183 non-null   object\n",
-      " 1   file_name    2183 non-null   object\n",
-      " 2   label        2183 non-null   object\n",
+      " 0   subdir_name  1600 non-null   object\n",
+      " 1   file_name    1600 non-null   object\n",
+      " 2   label        1600 non-null   object\n",
       "dtypes: object(3)\n",
-      "memory usage: 68.2+ KB\n",
-      "None\n",
-      "\n",
-      "Number of contentment images: 513\n",
-      "Number of amusement images: 473\n",
-      "Number of awe images: 288\n",
-      "Number of excitement images: 272\n",
-      "Number of sadness images: 263\n",
-      "Number of disgust images: 159\n",
-      "Number of anger images: 118\n",
-      "Number of fear images: 97\n"
+      "memory usage: 50.0+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "# split into stratified training and validation sets:\n",
-    "metadata_train, metadata_val = train_test_split(metadata_train_val, test_size=val_set_size, stratify=metadata_train_val[\"label\"], random_state=42)\n",
-    "assert metadata_val.shape[0] == val_set_size, \"Validation set metadata has incorrect size.\"\n",
+    "# remove test set:\n",
+    "metadata_train_val = metadata.drop(index=list(metadata_test.index))\n",
+    "\n",
+    "# construct stratified validation set by randomly sampling from each class:\n",
+    "metadata_val_groups = metadata_train_val.groupby(by=\"label\", axis=\"index\")\n",
+    "metadata_val = metadata_val_groups.sample(n=N_class_val, random_state=42)\n",
     "print(metadata_val.info())\n",
     "\n",
-    "# print validation set class distribution:\n",
-    "print()\n",
-    "label_counts = metadata_val[\"label\"].value_counts()\n",
-    "for label in metadata_val[\"label\"].value_counts().index:\n",
-    "    print(\"Number of {} images: {}\".format(label, label_counts[label]))"
+    "# sanity check:\n",
+    "for count in metadata_val[\"label\"].value_counts():\n",
+    "    assert count == N_class_val, \"Error with creating stratified validation set.\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 18629 entries, 0 to 21828\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   subdir_name  18629 non-null  object\n",
+      " 1   file_name    18629 non-null  object\n",
+      " 2   label        18629 non-null  object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 582.2+ KB\n",
+      "None\n",
+      "\n",
+      "contentment    4730\n",
+      "amusement      4324\n",
+      "awe            2481\n",
+      "excitement     2325\n",
+      "sadness        2233\n",
+      "disgust        1191\n",
+      "anger           776\n",
+      "fear            569\n",
+      "Name: label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# construct training set:\n",
+    "metadata_train = metadata_train_val.drop(index=list(metadata_val.index))\n",
+    "print(metadata_train.info())\n",
+    "print()\n",
+    "print(metadata_train[\"label\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +317,7 @@
     "metadata_test = metadata_test.reset_index(drop=True)\n",
     "\n",
     "# sanity checks:\n",
-    "assert all_metadata.shape[0] == metadata_train.shape[0] + metadata_val.shape[0] + metadata_test.shape[0], \"Subset set sizes don't add up.\"\n",
+    "assert metadata.shape[0] == metadata_train.shape[0] + metadata_val.shape[0] + metadata_test.shape[0], \"Subset set sizes don't add up.\"\n",
     "# check that all subsets are disjoint:\n",
     "metadata_subsets = [metadata_train, metadata_val, metadata_test]\n",
     "subset_names = list(metadata_files_split.keys())\n",
@@ -308,11 +326,11 @@
     "        if name_1 != name_2:\n",
     "            assert set(subset_1[\"file_name\"].tolist()).isdisjoint(set(subset_2[\"file_name\"].tolist())), \"{} and {} are not disjoint\".format(name_1, name_2)\n",
     "# more sanity checks:\n",
-    "class_counts_all = all_metadata[\"label\"].value_counts()\n",
+    "class_counts_all = metadata[\"label\"].value_counts()\n",
     "class_counts_train = metadata_train[\"label\"].value_counts()\n",
     "class_counts_val = metadata_val[\"label\"].value_counts()\n",
     "class_counts_test = metadata_test[\"label\"].value_counts()\n",
-    "for class_label in all_metadata[\"label\"].unique().tolist():\n",
+    "for class_label in metadata_test_groups.groups.keys():\n",
     "    assert class_counts_all[class_label] == class_counts_train[class_label] + class_counts_val[class_label] + class_counts_test[class_label], \"Error with splitting dataset.\"\n",
     "\n",
     "# save to file:\n",
